# assesspy

./: .Rhistory  .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CITATION.tff  README.md  README.rst  coveragerc.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.Rproj.user/B73446F7/: persistent-state
.Rproj.user/B73446F7/pcs/: files-pane.pper  windowlayoutstate.pper
.github/: CODEOWNERS
.github/workflows/: lint.yaml  pages.yaml  pre-commit.yaml  pypi-publish.yaml  pypi-upload.yaml  python-build-and-test.yaml  python-package.yaml  test-coverage.yaml
assesspy/: __init__.py  ci.py  formulas.py  load_data.py  metrics.py  outliers.py  sales_chasing.py  utils.py
assesspy/data/: IAAO_sample.csv  IAAO_sample_1_4.csv  IAAO_sample_d_2.csv  ccao_sample.parquet  mki_ki.csv  quintos_sample.csv  ratios_sample.parquet
assesspy/tests/: conftest.py  test_ci.py  test_formulas.py  test_metrics.py  test_outliers.py  test_sales_chasing.py
assesspy/tests/fixtures/: iaao_table_1_1.csv  iaao_table_1_4.csv  iaao_table_d_1.csv  iaao_table_d_2.csv
docs/: README.rst
docs/source/: IAAO_sample.rst  IAAO_sample_1_4.rst  IAAO_sample_d_1.rst  IAAO_sample_d_2.rst  authors.rst  ccao_sample.rst  ci.rst  cod.rst  conf.py  index.rst  ki.rst  ki_mki.rst  license.rst  med_ratio_met.rst  mki.rst  mki_ki.rst  outliers.rst  prb.rst  prd.rst  quintos_sample.rst  ratios_sample.rst  reference.rst  sales_chasing.rst  vignettes.rst
docs/source/notebooks/: example-ratio-study.ipynb
vignettes/: example-ratio-study.ipynb
