[project]
name = "assesspy"
version = "0.1.0"
description = "Python package for measuring assessment performance"
keywords = ["assessment", "property taxes", "local government"]
authors = [
  {name = "William Ridgeway", email = "william.ridgeway@cookcountyil.gov"},
  {name = "Dan Snow", email = "daniel.snow@cookcountyil.gov"},
  {name = "Michael Wagner", email = "michael.wagner2@cookcountyil.gov"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy >= 1.23.0",
  "pandas >= 1.4.0",
  "pyarrow >= 9.0.0",
  "scipy >= 1.8.1",
  "statsmodels >= 0.13.0"
]

[project.urls]
Repository = "https://github.com/ccao-data/assesspy"
Documentation = "https://ccao-data.github.io/assesspy/"

[project.optional-dependencies]
test = [
  "setuptools >= 61.0",
  "pytest >= 7.3.0",
  "pytest-cov >= 4.1.0",
]
docs = [
  "myst-nb >= 1.1.0",
  "sphinx >= 7.0.0",
  "sphinx-pyproject >= 0.3.0",
  "pydata-sphinx-theme >= 0.15.0",
  "ipykernel >= 6.0.0",
  "matplotlib >= 3.0.0"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.parquet"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cache-clear -rf --cov=assesspy --cov-report=term --cov-report=html --maxfail=10"
console_output_style = "count"
python_classes = "Test"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "assesspy/tests"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist = py39, py38, py310, py311, py312

[gh]
python =
    3.12 = py312
    3.11 = py311
    3.10 = py310
    3.9 = py39
    3.8 = py38
"""

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.sphinx-pyproject]
github_username = "ccao-data"
github_repository = "assesspy"
project = "assesspy"
copyright = "2022, Cook County Assessor's Office"
language = "en"
package_root = "assesspy"
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.doctest",
  "myst_nb"
]
templates_path = ["_templates"]
highlight_language = "none"
html_theme = "pydata_sphinx_theme"
html_logo = "../images/logo.png"
html_show_copyright = false
myst_enable_extensions = [
  "amsmath",
  "colon_fence",
  "deflist",
  "dollarmath",
  "html_image"
]
