[project]
name = "assesspy"
version = "2.0.1"
description = "Python package for measuring assessment performance"
keywords = ["assessment", "property taxes", "local government"]
authors = [
  {name = "William Ridgeway", email = "william.ridgeway@cookcountyil.gov"},
  {name = "Dan Snow", email = "daniel.snow@cookcountyil.gov"},
  {name = "Michael Wagner", email = "michael.wagner2@cookcountyil.gov"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23.1",
  "pandas>=1.4.3",
  "pyarrow>=9.0.0",
  "statsmodels>=0.13.2"
]

[project.urls]
Repository = "https://github.com/ccao-data/assesspy"
Documentation = "https://ccao-data.github.io/assesspy/"

[project.optional-dependencies]
dev = [
  "setuptools>=61.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]
docs = [
  "setuptools",
  "myst-nb",
  "sphinx",
  "sphinx-pyproject",
  "pydata-sphinx-theme",
  "ipykernel",
  "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.parquet"]

[tool.pytest.ini_options]
minversion = "7.0.0"
addopts = "-v --cache-clear -rf --cov=assesspy --cov-report=term --cov-report=html --maxfail=10"
console_output_style = "count"
python_classes = "Test"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "assesspy/tests"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist =
    py{39, 310}-lowest
    py{310, 311, 312, 313}

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras = dev
commands = pytest
passenv = UV_CACHE_DIR

[testenv:py{39, 310}-lowest]
uv_resolution = lowest-direct

[testenv:py{310, 311, 312, 313}]
uv_resolution = highest
"""

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
reportUnusedImport = false

[tool.sphinx-pyproject]
github_username = "ccao-data"
github_repository = "assesspy"
project = "assesspy"
copyright = "2024, Cook County Assessor's Office"
language = "en"
package_root = "assesspy"
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.doctest",
  "myst_nb"
]
templates_path = ["_templates"]
highlight_language = "none"
html_theme = "pydata_sphinx_theme"
html_logo = "../images/logo.png"
html_show_copyright = false
myst_enable_extensions = [
  "amsmath",
  "colon_fence",
  "deflist",
  "dollarmath",
  "html_image"
]
